# ffrs

./: Cargo.toml  LICENCE  README.md
src/: lib.rs  options.rs  searcher.rs  trie.rs  util.rs
src/tests/: fuzzy.rs  mod.rs  search.rs  searcher.rs
