[package]
name = "ffrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
more-asserts = "0.3.1"
regex = "1.8.0"
thiserror = "1.0.40"
unicode-normalization = "0.1.22"
unicode-segmentation = "1.10.1"
